@@ -361,7 +361,7 @@ abstract class Fallback implements ConfigConstInterface
     protected function returnDestination(): array
     {
         return [
-            // Either 'file' or 'browser'.
+            // Either 'file', 'browser' or 'browserImmediately'.
             static::VALUE => static::VALUE_BROWSER,
             static::RENDER => static::DISPLAY_ONLY_SELECT,
             static::EVALUATE => static::EVAL_DESTINATION,
